--- a/common/app/views/fragments/commonCssSetup.scala.html
+++ b/common/app/views/fragments/commonCssSetup.scala.html
@@ -2,4 +2,9 @@
 
 <link rel="stylesheet" type="text/css" href="@Static("stylesheets/main.min.css")" />
 
+<!--[if lte IE 8]>
+<link rel="stylesheet" type="text/css" href="@Static("stylesheets/old-ie.min.css")" />
+<![endif]-->
+
+
 <style class="initial" data-cache-name="WebEgyptian" data-cache-file-woff="@Static("fonts/WebEgyptian.woff.js")" data-cache-file-ttf="@Static("fonts/WebEgyptian.ttf.js")"></style>
