--- a/r2football/app/views/teamFixtures.scala.html
+++ b/r2football/app/views/teamFixtures.scala.html
@@ -10,21 +10,23 @@
 
     @fragments.footballNav("/football", None, None, "football-top-nav")
 
-    @fragments.filterBar(page.webTitle)
+    <div class="two-thirds">
+        @fragments.filterBar(page.webTitle)
 
-    @fragments.filters(filters, page, "fixtures")
+        @fragments.filters(filters, page, "fixtures")
 
-    <div class="matches-container two-thirds box-indent" role="main">
-        @fixtures.map{ fixture =>
-            <h2 class="competitions-date type-4">@fixture.fixture.date.toString("EEEE d MMMM yyyy")</h2>
+        <div class="matches-container box-indent" role="main">
+            @fixtures.map{ fixture =>
+                <h2 class="competitions-date type-4">@fixture.fixture.date.toString("EEEE d MMMM yyyy")</h2>
 
-            <a class="competition-title football-table-link zone-color type-4" href="@fixture.competition.url" data-link-name="view competition">
-                @fixture.competition.fullName <i class="i i-sport-arrow"></i>
-            </a>
-            <ol class="matches unstyled">
-                @fragments.renderMatch(fixture.fixture)
-            </ol>
-        }
+                <a class="competition-title football-table-link zone-color type-4" href="@fixture.competition.url" data-link-name="view competition">
+                    @fixture.competition.fullName <i class="i i-sport-arrow"></i>
+                </a>
+                <ol class="matches unstyled">
+                    @fragments.renderMatch(fixture.fixture)
+                </ol>
+            }
+        </div>
     </div>
 
     @fragments.footballNav("/football", None, None, "football-bottom-nav")
