Fix tab styles for desktop

--- a/common/app/assets/stylesheets/module/_tabs.less
+++ b/common/app/assets/stylesheets/module/_tabs.less
@@ -75,3 +75,16 @@
 .tabs-multiple li:last-child {
     border-left: none;
 }
+
+
+@media screen and (min-width: @desktopBreakpoint) {
+    .tabs a {
+        padding-left: 2px;
+        padding-right: 2px;
+    }
+    .tabs,
+    .tabs-content {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
