--- a/event/app/views/fragments/timeline.scala.html
+++ b/event/app/views/fragments/timeline.scala.html
@@ -32,7 +32,7 @@
 }
 
 @video(v: model.Video) = {
-<li class="chapter__article chaoter__article--media">
+<li class="chapter__article chapter__article--media">
     <i class="chapter__marker chapter__marker--small"></i>
     @fragments.relativeDate(v.webPublicationDate, false, false)
     <h4 class="article-headline">
