--- a/common/app/assets/stylesheets/module/experiments/_reaction.scss
+++ b/common/app/assets/stylesheets/module/experiments/_reaction.scss
@@ -38,7 +38,7 @@
 }
 
 .story-reaction__byline {
-  margin-bottom: 0px;
+  margin: 0 0 0 2px;
   font-family: $serifheadline;
   font-weight: 600;
   font-size: 1.6rem;
