--- a/football/app/views/fragments/frontTableBlock.scala.html
+++ b/football/app/views/fragments/frontTableBlock.scala.html
@@ -14,16 +14,17 @@
 
         @table.groups.map{ group =>
         <tbody class="table-football-body">
-            @group.round.map { round =>
-                @round.name.map { name =>
-                    <tr>
-                        <th colspan="20" class="type-6a table-football-leftaligned">@name</th>
-                    </tr>
-                    @* we repeat this nav for group tables *@
-                    @fragments.tableColumnHeaders()
+            @if(table.multiGroup) {
+                @group.round.map { round =>
+                    @round.name.map { name =>
+                        <tr>
+                            <th colspan="20" class="type-6a table-football-leftaligned">@name</th>
+                        </tr>
+                        @* we repeat this nav for group tables *@
+                        @fragments.tableColumnHeaders()
+                    }
                 }
             }
-
             @group.entries.zipWithRowInfo.map{ case (entry, row) => @fragments.tableRow(entry, row, highlightTeamId.map(_ == entry.team.id).getOrElse(false)) }
         </tbody>
         }
