--- a/common/app/views/fragments/trailblocks/thumbnail.scala.html
+++ b/common/app/views/fragments/trailblocks/thumbnail.scala.html
@@ -3,7 +3,7 @@
 <ul class="unstyled">
     @trails.take(numItemsVisible).zipWithRowInfo.map{ case (trail, info) =>
         <li class="trail"
-            data-link-name="trail@if(trail.tags.filter(_.id == "politics/local-elections").nonEmpty){ | front-story}"
+            data-link-name="trail@if(trail.tags.filter(_.id == "world/ohio").nonEmpty){ | front-story}"
             data-trail-tags="@trail.tags.map(_.id).mkString(",")">
             @fragments.trails.thumbnail(trail, info.rowNum, related, showThumbnail = (info.rowNum <= numThumbnails), headingLevel = headingLevel)
         </li>
