--- a/video/app/views/video.scala.html
+++ b/video/app/views/video.scala.html
@@ -1,7 +1,7 @@
-@(video: Video, storyPackage: List[Trail])(implicit request: RequestHeader)
+@(page: VideoPage)(implicit request: RequestHeader)
 
-@main(video, Switches.all){ }{
+@main(page.video, Switches.all){ }{
 
-    @fragments.videoBody(video, storyPackage)
+    @fragments.videoBody(page)
 
 }
