--- a/event/app/views/story.scala.html
+++ b/event/app/views/story.scala.html
@@ -8,11 +8,11 @@
         <h1 class="story-title story-storyline">@story.title</h1>
     </div>
 
-    <div class="tabs-container">
+    <div class="tabs-container story-tabs-container">
 
         @if(story.hasLiveContent) {
             <ol class="tabs js-tabs">
-                <li class="tabs-selected"><a href="#story" data-link-name="story">Story</a></li>
+                <li class="tabs-selected"><a href="#story" data-link-name="story">Summary</a></li>
                 <li><a href="#live" data-link-name="live">Live</a></li>
             </ol>
         }
