--- a/event/app/views/story.scala.html
+++ b/event/app/views/story.scala.html
@@ -24,13 +24,14 @@
                     @fragments.explainer(story)
 
                     <div class="story-content">
+                        @fragments.reaction(story)
                         @fragments.quote(story, 0)
                         @fragments.agents(story)
                         @fragments.quote(story, 1)
                     </div>
 
-                    @fragments.places(story)
                     @fragments.pictures(story)
+                    @fragments.places(story)
                     @fragments.timeline(story)
                     @fragments.feedback()
                 
