--- a/common/app/assets/stylesheets/module/experiments/_story.scss
+++ b/common/app/assets/stylesheets/module/experiments/_story.scss
@@ -138,7 +138,7 @@ $orange: #FF7F00;
   font-weight: 200;
   font-size: 2rem;
   line-height: 2.4rem;
-  margin: 0 0 44px 0;
+  margin: 0 0 4px 0;
   color: #000;
 }
 
@@ -152,10 +152,9 @@ $orange: #FF7F00;
 }
 
   .story-quote__cite {
-    position: absolute;
-    bottom: 48px;
-    left: 2px;
-    margin-bottom: 0px;
+    display:block;
+    margin-left: 2px;
+    margin-bottom: 15px;
     font-family: $serifheadline;
     font-weight: 600;
     font-size: 1.6rem;
