--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -37,11 +37,11 @@
     </a>
 </header>
 
-<div class="nav-popup nav-popup--topstories nav-popup--box is-off"></div>
+<div class="nav-panel nav-panel--topstories nav-panel--box is-off"></div>
 
-<div class="nav-popup nav-popup--search nav-popup--box search js-search--popup is-off"></div>
+<div class="nav-panel nav-panel--search nav-panel--box search js-search--panel is-off"></div>
 
-<div class="nav-popup nav-popup--sections nav-popup--small is-off">
+<div class="nav-panel nav-panel--sections nav-panel--small is-off">
     @fragments.sections(page, false)
 </div>
 
