Re-use template.

--- a/common/app/views/fragments/trailblocks/featured.scala.html
+++ b/common/app/views/fragments/trailblocks/featured.scala.html
@@ -1,11 +1,11 @@
 @(trails: Seq[Trail], numItemsVisible: Int = 5, related: Boolean = false)(implicit request: RequestHeader)
 
 <ul class="unstyled">
-@trails.take(numItemsVisible).zipWithRowInfo.map{ case (trail, info) =>
-    @if(info.rowNum == 1) {
-        @fragments.trails.featured(trail, info.rowNum, related, "li")
-    } else {
-        @fragments.trails.thumbnail(trail, info.rowNum, related, "li")
+    @trails.take(numItemsVisible).zipWithRowInfo.map{ case (trail, info) =>
+        @if(info.rowNum == 1) {
+            @fragments.trails.featured(trail, info.rowNum, related, "li", 2, false)
+        } else {
+            @fragments.trails.thumbnail(trail, info.rowNum, related, "li")
+        }
     }
-}
 </ul>
