--- a/common/app/assets/stylesheets/module/trails/_trail.scss
+++ b/common/app/assets/stylesheets/module/trails/_trail.scss
@@ -34,35 +34,50 @@
         text-decoration: underline;
     }
 
-@media screen and (min-width: 4 * $gridWidth) {
-  .trail__headline { margin-bottom: 0; }
+  /* Trail headlines */
 
-  .trail__headline.short  {min-height: $gridHeight * 1 - $datelineHeight}
-  .trail__headline.medium {min-height: $gridHeight * 2 - $datelineHeight}
-  .trail__headline.long   {min-height: $gridHeight * 2 - $datelineHeight}
+  @media (min-width: 4 * $gridWidth) {
+    .trail__headline { margin-bottom: 0; }
 
-  .trail--featured  .trail__headline.short  {min-height: $gridHeight * 2 - $datelineHeight}
-  .trail--featured  .trail__headline.medium {min-height: $gridHeight * 3 - $datelineHeight}
-  .trail--featured  .trail__headline.long   {min-height: $gridHeight * 3 - $datelineHeight}
-}
+    .trail__headline.short  {min-height: $gridHeight * 1 - $datelineHeight}
+    .trail__headline.medium {min-height: $gridHeight * 2 - $datelineHeight}
+    .trail__headline.long   {min-height: $gridHeight * 2 - $datelineHeight}
+    .trail__headline.xlong   {min-height: $gridHeight * 2 - $datelineHeight}
+    .trail__headline.xxlong   {min-height: $gridHeight * 2 - $datelineHeight}
+   
+    .trail--featured  .trail__headline.short  {min-height: $gridHeight * 2 - $datelineHeight}
+    .trail--featured  .trail__headline.medium {min-height: $gridHeight * 2 - $datelineHeight}
+    .trail--featured  .trail__headline.long   {min-height: $gridHeight * 3 - $datelineHeight}
+    .trail--featured  .trail__headline.xlong   {min-height: $gridHeight * 3 - $datelineHeight}
+    .trail--featured  .trail__headline.xxlong   {min-height: $gridHeight * 3 - $datelineHeight}
+  }
 
-@media screen and (min-width: 6 * $gridWidth) {
-  .trail__headline.medium {min-height: $gridHeight * 1 - $datelineHeight}
+  @media (min-width: 6 * $gridWidth) {
+    .trail__headline.medium {min-height: $gridHeight * 1 - $datelineHeight}
+    .trail__headline.long   {min-height: $gridHeight * 1 - $datelineHeight}
 
-  .trail--featured  .trail__headline.short  {min-height: $gridHeight * 1 - $datelineHeight}
-  .trail--featured  .trail__headline.medium {min-height: $gridHeight * 2 - $datelineHeight}
-}
+    .trail--featured  .trail__headline.short  {min-height: $gridHeight * 1 - $datelineHeight}
+    .trail--featured  .trail__headline.long   {min-height: $gridHeight * 2 - $datelineHeight}
+    .trail--featured  .trail__headline.xlong   {min-height: $gridHeight * 2 - $datelineHeight}
+    .trail--featured  .trail__headline.xxlong   {min-height: $gridHeight * 2 - $datelineHeight}
+  }
+   
+  @media (min-width: 8 * $gridWidth) {
+    .trail__headline.xlong   {min-height: $gridHeight * 1 - $datelineHeight}
 
-@media screen and (min-width: 10 * $gridWidth) {
-  .trail__headline.long   {min-height: $gridHeight * 1 - $datelineHeight}
+    .trail--featured  .trail__headline.medium {min-height: $gridHeight * 1 - $datelineHeight}
+    .trail--featured  .trail__headline.long   {min-height: $gridHeight * 1 - $datelineHeight}
+  }
 
-  .trail--featured  .trail__headline.medium {min-height: $gridHeight * 1 - $datelineHeight}
-  .trail--featured  .trail__headline.long   {min-height: $gridHeight * 2 - $datelineHeight}
-}
+  @media (min-width: 10 * $gridWidth) {
+    .trail__headline.xxlong   {min-height: $gridHeight * 1 - $datelineHeight}
+  }
 
-@media screen and (min-width: 14 * $gridWidth) {
-  .trail--featured  .trail__headline.long   {min-height: $gridHeight * 1 - $datelineHeight}
-}
+  @media (min-width: 12 * $gridWidth) {
+    .trail--featured  .trail__headline.xlong   {min-height: $gridHeight * 1 - $datelineHeight}
+    .trail--featured  .trail__headline.xxlong   {min-height: $gridHeight * 1 - $datelineHeight}
+  }
+
 
 .trail__text {
     @extend %type-3;
@@ -70,7 +85,7 @@
     padding: 0;
     color: $neutral4;
 
-    @media screen and (min-width: 37.5em) {
+    @media (min-width: 37.5em) {
         clear: none;
     }
 }
