--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -19,9 +19,8 @@
 
 .article-headline {
     font-size: 2.4rem;
-    line-height: 2.8r8em;
+    line-height: 2.8rem;
 }
-
 
 .article-standfirst {
     border-top: 1px dotted $neutral10;
