Don't style utility classes. Naughty boy.

--- a/common/app/assets/stylesheets/module/trails/_trail.scss
+++ b/common/app/assets/stylesheets/module/trails/_trail.scss
@@ -80,7 +80,7 @@
 /* Thumbnail
  ========================================================================== */
 .trail--thumbnail {
-    .media {
+    .trail__media {
         margin: -5px 0 24px 0;
     }
 
