--- a/common/app/views/fragments/trails/thumbnail.scala.html
+++ b/common/app/views/fragments/trails/thumbnail.scala.html
@@ -12,7 +12,7 @@
         </h@headingLevel>
     </div>
 
-    <div class="media">
+    <div class="media trail__media">
         @if(showThumbnail) {
             @trail.thumbnailPath.map{ thumbnailPath =>
                 <a href="@trail.url" class="media__img grid-box-2" data-link-name="@rowNum | image">
