BEMtastic class names

--- a/common/app/views/fragments/trails/featured.scala.html
+++ b/common/app/views/fragments/trails/featured.scala.html
@@ -6,7 +6,7 @@
     <div class="trail__head">
         @fragments.relativeDate(trail.webPublicationDate, trail.isLive, isFront=true)
 
-        <h@headingLevel class="trail__headline @charRange(trail.headline)">
+        <h@headingLevel class="trail__headline">
             <a href="@trail.url" @if(related){itemprop="relatedLink"} data-link-name="@rowNum | text">
                 @RemoveOuterParaHtml(trail.headline)
             </a>
