--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -302,30 +302,30 @@ video {
 /* Article headline */
 
 @media (min-width: 4 * $gridWidth) {
-  .article-headline.short  {min-height: $gridHeight * 2 - $datelineHeight}
-  .article-headline.medium {min-height: $gridHeight * 2 - $datelineHeight}
-  .article-headline.long   {min-height: $gridHeight * 3 - $datelineHeight}
-  .article-headline.xlong  {min-height: $gridHeight * 3 - $datelineHeight}
-  .article-headline.xxlong {min-height: $gridHeight * 4 - $datelineHeight}
+  .article-headline--short  {min-height: $gridHeight * 2 - $datelineHeight}
+  .article-headline--medium {min-height: $gridHeight * 2 - $datelineHeight}
+  .article-headline--long   {min-height: $gridHeight * 3 - $datelineHeight}
+  .article-headline--xlong  {min-height: $gridHeight * 3 - $datelineHeight}
+  .article-headline--xxlong {min-height: $gridHeight * 4 - $datelineHeight}
 }
  
 @media (min-width: 5 * $gridWidth) {
-  .article-headline.long   {min-height: $gridHeight * 2 - $datelineHeight}
-  .article-headline.xxlong {min-height: $gridHeight * 3 - $datelineHeight}
+  .article-headline--long   {min-height: $gridHeight * 2 - $datelineHeight}
+  .article-headline--xxlong {min-height: $gridHeight * 3 - $datelineHeight}
 }
  
 @media (min-width: 6 * $gridWidth) {
-  .article-headline.xxlong {min-height: $gridHeight * 3 - $datelineHeight}
+  .article-headline--xxlong {min-height: $gridHeight * 3 - $datelineHeight}
 }
  
 @media (min-width: 7 * $gridWidth) {
-  .article-headline.xlong  {min-height: $gridHeight * 2 - $datelineHeight}
+  .article-headline--xlong  {min-height: $gridHeight * 2 - $datelineHeight}
 }
  
 @media (min-width: 11 * $gridWidth) {
-  .article-headline.short  {min-height: $gridHeight * 2 - $datelineHeight}
-  .article-headline.medium {min-height: $gridHeight * 3 - $datelineHeight}
-  .article-headline.long   {min-height: $gridHeight * 3 - $datelineHeight}
-  .article-headline.xlong  {min-height: $gridHeight * 4 - $datelineHeight}
-  .article-headline.xxlong {min-height: $gridHeight * 4 - $datelineHeight}
+  .article-headline--short  {min-height: $gridHeight * 2 - $datelineHeight}
+  .article-headline--medium {min-height: $gridHeight * 3 - $datelineHeight}
+  .article-headline--long   {min-height: $gridHeight * 3 - $datelineHeight}
+  .article-headline--xlong  {min-height: $gridHeight * 4 - $datelineHeight}
+  .article-headline--xxlong {min-height: $gridHeight * 4 - $datelineHeight}
 }
