--- a/common/app/views/fragments/headline.scala.html
+++ b/common/app/views/fragments/headline.scala.html
@@ -1,3 +1,3 @@
 @(headline: String, classes: List[String] = Nil)(implicit request: RequestHeader)
 
-<h1 itemprop="headline" class="article-headline @charRange(headline) @if(classes.nonEmpty){ @classes.mkString(" ")}">@Html(headline)</h1>
+<h1 itemprop="headline" class="article-headline article-headline--@charRange(headline) @if(classes.nonEmpty){ @classes.mkString(" ")}">@Html(headline)</h1>
