--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -32,6 +32,10 @@
         <span>Top stories</span>
         <i class="i i-top-stories"></i>
     </a>
+
+    @if(page.id == ""){
+        <i class="i i-oops"></i>
+    }
 </header>
 
 <div class="nav-popup-topstories nav-popup nav-popup--box is-off"></div>
