--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -26,6 +26,13 @@
     text-indent: -9999px;
 }
 
+.i-oops {
+    position: absolute;
+    top: 35px;
+    right: 5px;
+    pointer-events: none;
+}
+
 
 /*
      Layout helpers
@@ -65,7 +72,7 @@
     position: relative;
     top: 0;
     height: 100%;
-    width: 100%; 
+    width: 100%;
     @include transform(translateZ(0px));
 }
 
