--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -50,30 +50,32 @@
 
 .i-more-arrow { background-position: -567px -8px; width: 10px; height: 8px; }
 
-.i-powered-by-ee { background-position: -222px -28px; width: 68px; height: 31px; }
+.i-oops { background-position: -222px -28px; width: 70px; height: 70px; }
 
-.i-quote-marks { background-position: -304px -28px; width: 64px; height: 32px; }
+.i-powered-by-ee { background-position: -292px -28px; width: 68px; height: 31px; }
 
-.i-red-card { background-position: -382px -28px; width: 9px; height: 12px; }
+.i-quote-marks { background-position: -374px -28px; width: 64px; height: 32px; }
 
-.i-search-blue { background-position: -391px -28px; width: 14px; height: 14px; }
+.i-red-card { background-position: -452px -28px; width: 9px; height: 12px; }
 
-.i-search { background-position: -405px -28px; width: 14px; height: 14px; }
+.i-search-blue { background-position: -461px -28px; width: 14px; height: 14px; }
 
-.i-sport-arrow-small { background-position: -419px -28px; width: 5.802px; height: 10px; }
+.i-search { background-position: -475px -28px; width: 14px; height: 14px; }
 
-.i-sport-arrow { background-position: -424px -28px; width: 8.703px; height: 15px; }
+.i-sport-arrow-small { background-position: -489px -28px; width: 5.802px; height: 10px; }
 
-.i-story-quote { background-position: -432px -28px; width: 49px; height: 25px; }
+.i-sport-arrow { background-position: -494px -28px; width: 8.703px; height: 15px; }
 
-.i-tool { background-position: -481px -28px; width: 13px; height: 13px; }
+.i-story-quote { background-position: -502px -28px; width: 49px; height: 25px; }
 
-.i-top-stories-active { background-position: -494px -28px; width: 16px; height: 16px; }
+.i-tool { background-position: -551px -28px; width: 13px; height: 13px; }
 
-.i-top-stories { background-position: -510px -28px; width: 16px; height: 16px; }
+.i-top-stories-active { background-position: -564px -28px; width: 16px; height: 16px; }
 
-.i-twitter { background-position: -526px -28px; width: 25px; height: 20px; }
+.i-top-stories { background-position: -551px -44px; width: 16px; height: 16px; }
 
-.i-witness-logo { background-position: -382px -53px; width: 119px; height: 16px; }
+.i-twitter { background-position: -567px -44px; width: 25px; height: 20px; }
 
-.i-yellow-card { background-position: -501px -53px; width: 9px; height: 12px; }
+.i-witness-logo { background-position: -292px -64px; width: 119px; height: 16px; }
+
+.i-yellow-card { background-position: -411px -64px; width: 9px; height: 12px; }
