--- a/style-guide/app/views/styleGuide/fragments/sprites.scala.html
+++ b/style-guide/app/views/styleGuide/fragments/sprites.scala.html
@@ -23,6 +23,7 @@
 <tr><td class="type-9">.i-menu-active</td><td class="sprite-cell"><i class="i i-menu-active"></i></td></tr>
 <tr><td class="type-9">.i-menu</td><td class="sprite-cell"><i class="i i-menu"></i></td></tr>
 <tr><td class="type-9">.i-more-arrow</td><td class="sprite-cell"><i class="i i-more-arrow"></i></td></tr>
+<tr><td class="type-9">.i-oops</td><td class="sprite-cell"><i class="i i-oops"></i></td></tr>
 <tr><td class="type-9">.i-powered-by-ee</td><td class="sprite-cell"><i class="i i-powered-by-ee"></i></td></tr>
 <tr><td class="type-9">.i-quote-marks</td><td class="sprite-cell"><i class="i i-quote-marks"></i></td></tr>
 <tr><td class="type-9">.i-red-card</td><td class="sprite-cell"><i class="i i-red-card"></i></td></tr>
