Only consecutive paragraphs are indented

--- a/common/app/assets/stylesheets/module/external/_from-content-api.scss
+++ b/common/app/assets/stylesheets/module/external/_from-content-api.scss
@@ -38,7 +38,10 @@
     // Experiment with indents
     > p {
         margin-bottom: 0;
-        text-indent: 1.5em;
+
+        + p {
+            text-indent: 1.5em;
+        }
     }
 }
 
