Add add-slot-fabric-video to fabric-video slot

--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -184,7 +184,7 @@
     }
 }
 
-.ad-slot-fabric-expanding-v1 {
+.ad-slot-fabric-expanding-v1, .ad-slot-fabric-video {
     @include mq($until: tablet) {
         width: auto;
         margin-top: 0;
