Adding fixed height to logo tagline to stop header movement on load

--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -118,8 +118,8 @@
                             <![endif]-->
                         }
                         @if(Edition(request) == Uk) {
-                        <object class="hide-on-mobile hide-on-slim-header">
-                            <a class="logo__tagline" href="/culture/2016/mar/22/the-guardian-named-website-of-the-year-at-press-awards" data-link-name="website of the year">website of the year</a>
+                        <object class="logo-tagline hide-on-mobile hide-on-slim-header">
+                            <a class="hide-on-mobile hide-on-slim-header logo-tagline__link" href="/culture/2016/mar/22/the-guardian-named-website-of-the-year-at-press-awards" data-link-name="website of the year">website of the year</a>
                         </object>
                         }
                     </a>
