Revert "Merge pull request #14071 from guardian/rk-revealer-performance"
This reverts commit 2dcdabcf9ed0cfb77cae3c0b5c1514ab004bec8e, reversing
changes made to 6a21e9873e9c10794e9cc72fde0a20c3618147ad.

--- a/static/src/stylesheets/module/commercial/creatives/_revealer.scss
+++ b/static/src/stylesheets/module/commercial/creatives/_revealer.scss
@@ -3,19 +3,17 @@
     position: relative;
 
     .creative__cta {
-        position: absolute;
+        position: absolute;;
         height: 100%;
         width: 100%;
         clip: rect(0, auto, auto, 0);
-        overflow: hidden;
     }
 
     .creative__background {
         position: fixed;
+        height: 100%;
         top: 0;
-        left: 0;
-        background-size: cover;
-        backface-visibility: hidden;
+        transform: translate(-50%, 0);
     }
 
     .creative__button {
